testsuite/tests/parser/should_fail/NoNumericUnderscores1.stderr

NoNumericUnderscores1.hs:11:3: error: [GHC-62330]
    Illegal underscores in floating literals
    Suggested fix:
      Perhaps you intended to use the ‘NumericUnderscores’ extension
